--- a/pic1.html
+++ b/pic1.html
@@ -48,16 +48,31 @@
                 background-image: url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0nMTAwJyBoZWlnaHQ9JzEwMCcgeG1sbnM9J2h0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnJz48dGV4dCB5PScxNScgZmlsbD0ncmdiYSgwLDE1MCwxNTAsMC44KScgZm9udC1zaXplPScxMCcgdHJhbnNmb3JtPSdyb3RhdGUoLTMwIDEyMCAwKSc+MjAxMjUwMDgwIOWImOWtkOaJrDwvdGV4dD48L3N2Zz4=");
             }
 
+            .titleHead {
+                font-size: 40px;
+                font-weight: 100;
+                font-family: 'Courier New', Courier, monospace;
+            }
+
         </style>
     </head>
 
     <body>
         <div id="container">
+            <div class="titleHead" id="UserName"></div>
             <img src="https://box.nju.edu.cn/f/d478040ccea448b78eea/?dl=1" loading="lazy"/></a>
             <div class="watermark"></div>
         </div>
         
-        
+        <script type="text/javascript">
+            window.onload = getuserName;
+            function getuserName(){
+                var userName="那抹秋意"
+                console.log(window.localStorage.getItem("username"))
+                if(window.localStorage.getItem("username")!=null) userName="那抹秋意————"+window.localStorage.getItem("username");
+                document.getElementById('UserName').innerHTML=userName;
+            }
+        </script>
     </body>
     </html>
 
